# zagzig-tools

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: user-manual.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: admin-required-tooltip.tsx  admin-status-badge.tsx  app-version.tsx  collapsible-details.tsx  console.tsx  detail-list.tsx  language-switcher.tsx  theme-switcher.tsx  title-bar.tsx  update-button.tsx
src/features/certificates/: certificates-page.tsx  use-certificates.ts
src/features/code-signing/: code-signing-page.tsx  use-code-signing-certificates.ts  use-signtool.ts
src/features/connection-test/: connection-test-page.tsx  use-connection-history.ts
src/features/dashboard/: admin-alert-card.tsx  dashboard-page.tsx
src/features/dns/: dns-page.tsx  use-dns-settings.ts
src/features/dns-cache/: dns-cache-page.tsx  use-dns-cache.ts
src/features/dns-monitor/: dns-monitor-page.tsx  dns-monitor-store.ts  use-dns-monitor.ts
src/features/hosts/: hosts-page.tsx  use-hosts-file.ts
src/i18n/: index.ts
src/lib/: local-storage-cache.ts  nav.ts  relative-time.ts  use-cached-invoke.ts  use-is-administrator.ts  use-update-checker.ts
tui/: Cargo.toml
tui/src/: app.rs  dns.rs  main.rs  monitor.rs  ping.rs  sysdns.rs  ui.rs  update.rs  util.rs  zipsign-public.key
tui/src/screens/: connection_test.rs  dashboard.rs  dns_monitor.rs  dns_servers.rs  mod.rs
(+10 files in other folders)
